<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ziterz.marlo.User.UserLoginActivity"
    android:background="@color/colorBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/border_top"
        android:layout_alignParentBottom="true">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/desc_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/buat_akun"
            android:textAlignment="center"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/desc_login">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/marlo_launcher"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"/>

            <EditText
                android:id="@+id/email_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_login"
                android:ems="10"
                android:padding="15dp"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/password_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_login"
                android:ems="10"
                android:padding="15dp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:hint="@string/password_input"
                android:fontFamily="sans-serif"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="true"
                android:text="@string/button_login"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_style"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


