<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.tinker.marlo.User.UserDetailActivity"
    tools:showIn="@layout/activity_user_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_bottom"
            android:weightSum="4">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/call_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_call"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/call_icon_text"
                    android:layout_below="@+id/call_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="#2ecc71"
                    android:text="@string/telepon"
                    style="@style/MarloIconMenu"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/map_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_place"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/map_icon_text"
                    android:layout_below="@+id/map_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/peta"
                    style="@style/MarloIconMenu"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/comment_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_comment"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/comment_icon_text"
                    android:layout_below="@+id/comment_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="#e67e22"
                    android:text="@string/komentar"
                    style="@style/MarloIconMenu"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/open_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_watch_later_buka"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/open_icon_text"
                    android:layout_below="@+id/open_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="#e74c3c"
                    android:text="@string/buka"
                    style="@style/MarloIconMenu"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/title_pilih_layanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/border_bottom_title">
                <TextView
                    android:id="@+id/title_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000"
                    android:textAllCaps="true"
                    android:layout_marginBottom="5dp"
                    android:text="Pilih Layanan"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/border_bottom">
                <TextView
                    android:id="@+id/title_antarjemput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_antarjemput"
                    style="@style/MarloTitle"/>
                <TextView
                    android:id="@+id/subtitle_antar_jemput"
                    android:layout_below="@+id/title_antarjemput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_antarjemput"
                    android:textStyle="italic"
                    android:textColor="#B0B0B0"/>
                <TextView
                    android:id="@+id/harga_antar_jemput"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="130dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="Gratis"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/border_bottom">
                <TextView
                    android:id="@+id/title_kiloanbiasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kiloanbiasa"
                    style="@style/MarloTitle"/>
                <TextView
                    android:id="@+id/subtitle_kiloanbiasa"
                    android:layout_below="@+id/title_kiloanbiasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_kiloanbiasa"
                    android:textStyle="italic"
                    android:textColor="#B0B0B0"/>
                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/button_min_1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_toLeftOf="@+id/text_value_1"
                        android:text="-"
                        android:backgroundTint="@color/colorBackground"/>
                    <TextView
                        android:id="@+id/text_value_1"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:textSize="30dp"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_toLeftOf="@+id/button_plus_1"
                        android:text="0"/>
                    <Button
                        android:id="@+id/button_plus_1"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:text="+"
                        android:backgroundTint="@color/colorBackground"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/border_bottom">
                <TextView
                    android:id="@+id/title_kiloanextra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kiloanextra"
                    style="@style/MarloTitle"/>
                <TextView
                    android:id="@+id/subtitle_kiloanextra"
                    android:layout_below="@+id/title_kiloanextra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_kiloanextra"
                    android:textStyle="italic"
                    android:textColor="#B0B0B0"/>
                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/button_min_2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_toLeftOf="@+id/text_value_2"
                        android:text="-"
                        android:backgroundTint="@color/colorBackground"/>
                    <TextView
                        android:id="@+id/text_value_2"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:textSize="30dp"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_toLeftOf="@+id/button_plus_2"
                        android:text="0"/>
                    <Button
                        android:id="@+id/button_plus_2"
                        android:layout_weight="2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:text="+"
                        android:backgroundTint="@color/colorBackground"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/border_bottom">
                <TextView
                    android:id="@+id/title_kiloankilat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kiloankilat"
                    style="@style/MarloTitle"/>
                <TextView
                    android:id="@+id/subtitle_kiloankilat"
                    android:layout_below="@+id/title_kiloankilat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_kiloankilat"
                    android:textColor="#B0B0B0"
                    android:textStyle="italic"/>
                <RelativeLayout
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/button_min_3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_toLeftOf="@+id/text_value_3"
                        android:text="-"
                        android:backgroundTint="@color/colorBackground"/>
                    <TextView
                        android:id="@+id/text_value_3"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:textSize="30dp"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_toLeftOf="@+id/button_plus_3"
                        android:text="0"/>
                    <Button
                        android:id="@+id/button_plus_3"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:text="+"
                        android:backgroundTint="@color/colorBackground"/>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
